# Sheet_Music_Reader

./: .gitignore  .gitmodules  README.md
SheetMusicReader/app/: build.gradle  proguard-rules.pro
SheetMusicReader/app/src/main/res/layout/: activity_dashboard.xml  content_dashboard.xml
SheetMusicReader/native/djinni-mapping/: MeasureDetection.djinni
Sheet_Buddy/: local.properties
Sheet_Buddy/app/: build.gradle
Sheet_Buddy/app/src/main/: AndroidManifest.xml
android/SheetMusicReader/: build.gradle  djinni_create.sh
android/SheetMusicReader/app/: CMakeLists.txt  build.gradle
android/SheetMusicReader/app/src/main/: AndroidManifest.xml
android/SheetMusicReader/app/src/main/java/smr/sheetmusicreader/: Dashboard.java  DashboardActivity.java  FileListFragment.java  FileListInterface.java  FileListViewModel.java  MobilefiedPdfList.java  PdfListAdapter.java  PdfListItemViewModel.java  PdfListManager.java  RawPdfList.java
android/SheetMusicReader/app/src/main/java/smr/sheetmusicreader/dashboard/: DashboardActivity.java
android/SheetMusicReader/app/src/main/java/smr/sheetmusicreader/dashboard/pdflistfragment/: FileListFragment.java  FileListInterface.java  FileListViewModel.java  ListHandlerFactory.java  MobilefiedPdfList.java  PdfListAdapter.java  PdfListItemViewModel.java  PdfListManager.java  RawPdfList.java
android/SheetMusicReader/app/src/main/java/smr/sheetmusicreader/dashboard/pdflistfragment/viewmodels/: FileListViewModel.java  PdfListItemViewModel.java
android/SheetMusicReader/app/src/main/java/smr/sheetmusicreader/dashboard/pdfselectionfragment/: PdfSelectionUtils.java  PdfSelectorFragment.java
android/SheetMusicReader/app/src/main/java/smr/sheetmusicreader/measureselection/: MeasureSelectionActivity.java
android/SheetMusicReader/app/src/main/res/layout/: activity_dashboard.xml  content_dashboard.xml  fragment_file_list.xml  fragment_pdf_selector.xml  pdf_list_element.xml
android/SheetMusicReader/app/src/main/res/menu/: menu_dashboard.xml
android/SheetMusicReader/app/src/main/res/values/: strings.xml
android/SheetMusicReader/gradle/wrapper/: gradle-wrapper.properties
android/SheetMusicReader/openCVLibrary341/: build.gradle
generated-src/cpp/: hello_world.hpp  measure_reader.hpp
generated-src/java/: HelloWorld.java  MeasureReader.java
generated-src/jni/: NativeHelloWorld.cpp  NativeHelloWorld.hpp  NativeMeasureReader.cpp  NativeMeasureReader.hpp
generated-src/objc/: SMRHelloWorld+Private.h  SMRHelloWorld+Private.mm  SMRHelloWorld.h  SMRMeasureReader+Private.h  SMRMeasureReader+Private.mm  SMRMeasureReader.h
native/: djinni-create.sh
native/native-src/fileio/: PdfUtils.cpp  PdfUtils.hpp
native/native-src/measuredetection/: MeasureDetection.djinni  MeasureDetectionController.cpp  MeasureDetectionController.h  MeasureDetectionController.hpp
(+20 files in other folders)
